# OpenDoor

./: .coverage  .coveragerc  .gitattributes  .gitignore  .gitmodules  .landscape.yml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  README_v5.9.0.md  TODO  TODO.txt  VERSION  appveyor.yml  conf.py  keyboard.py  mkdocs.yml  opendoor.conf  opendoor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  test_shuffling.py  tox.ini  wercker.yml
.appveyor/: env.cmd  install.ps1
.circleci/: config.yml
.devin/: wiki.json
.github/: FUNDING.yml
Exceptions/: ArgumentParserError.py  __init__.py
Libraries/: Args.py  Command.py  Controller.py  FileReader.py  Filter.py  Formatter.py  Help.py  Http.py  HttpConfig.py  Logger.py  Message.py  Progress.py  Project.py  Version.py  __init__.py
Tests/: ControllerTest.py
Vendors/: Colors.py  Version.py  __init__.py
Version/: __init__.py
benchmarks/: perf_baseline.py
data/: .gitignore  directories.dat.back  directories.orig,dat  newlist.txt  shells.txt  test.txt
docs/: Changelog.md  Contribution.md  Installation-and-update.md  License.md  Makefile  Sniffers.md  Testing.md  Usage.md  Wizard.md  conf.py  index.html  index.md  make.bat  requirements.txt  src.controller.html  src.core.color.color.html  src.core.color.config.html  src.core.color.html  src.core.decorators.decorators.html  src.core.decorators.html  src.core.decorators.timer.html  src.core.filesystem.html  src.core.helper.html  src.core.html  src.core.http.exceptions.html  src.core.http.html  src.core.http.http.html  src.core.http.providers.accept.html  src.core.http.providers.cookies.html  src.core.http.providers.debug.html  src.core.http.providers.header.html  src.core.http.providers.html  src.core.http.providers.request.html  src.core.http.providers.response.html  src.core.http.proxy.html  src.core.http.response.html  src.core.http.socks.html  src.core.http.ssl.html  src.core.http.warnings.html  src.core.logger.html  (+18 more)
src/: Controller.py  FileReader.py  Filter.py  Http.py  Logger.py  Message.py  Progress.py  Version.py  __init__.py  controller.py  exceptions.py  registry.py  registry_manager.py
tests/: __init__.py  test_controller.py  test_controller_fingerprint_extra.py  test_controller_session_extra.py  test_core_color_extra.py  test_core_core_extra.py  test_core_filesystem.py  test_core_filesystem_extra.py  test_core_filesystem_streaming.py  test_core_filter.py  test_core_helper.py  test_core_helper_extra.py  test_core_http_plugins_low_coverage.py  test_core_http_plugins_response_branch_coverage.py  test_core_http_plugins_response_collation.py  test_core_http_plugins_response_file.py  test_core_http_plugins_response_indexof.py  test_core_http_plugins_response_skipempty.py  test_core_http_plugins_response_skipsizes.py  test_core_http_providers.py  test_core_http_proxy_extra.py  test_core_http_request_provider_socks_extra.py  test_core_http_requests.py  test_core_http_response.py  (+52 more)
(+199 files in other folders)
