[info]
name       = Opendoor scanner
repository = git@github.com:stanislav-web/OpenDoor.git
setup      = https://raw.githubusercontent.com/stanislav-web/OpenDoor/master/setup.cfg
license    = License: GNU General Public License
version    = 3.0.3

[metadata]
description-file = README.md

[opendoor]
directories = data/directories.dat
ignored = data/ignored.dat
proxies = data/proxies.dat
subdomains = data/subdomains.dat
useragents = data/useragents.dat
tmplist    = tmp/list.tmp
reports    = reports/

[system]
exceptions_log = syslog/exceptions.log
